--- a/estilos.css
+++ b/estilos.css
@@ -5,6 +5,7 @@ body {
     scroll-padding-top: 100px; 
     font-family: "Roboto";
     font-weight: 100;
+    min-height: 100vh;
 }
 
 .pa{
@@ -128,8 +129,7 @@ body {
 }
 
 .total-texto{
-    font-size: 1.5rem;
-    margin-left: 2rem;
+    font-size: 1.2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -138,7 +138,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-left: 1rem;
 }
 
@@ -310,7 +310,6 @@ text-align: center;
 }
 
 .card-img-top {
-   
     max-width: 50%;
     border: 5px ;
     align-items: center;
@@ -335,6 +334,7 @@ text-align: center;
     color: #fff;
     background-color: hwb(140 18% 33%);
     border-color: hsl(0, 0%, 0%);
+
 }
 
 .card{
@@ -395,4 +395,9 @@ text-align: center;
 
 .github-link{
     color: #fff;
+}
+
+.bat-carro{
+    margin: 5px;
+    height: 60px;
 }
